...
              ),
            ),
            elevation: 0,
            centerTitle: true,
            actions: [
              PopupMenuButton(
                key: const Key('appBarPopupMenuButton'),
                shape: const RoundedRectangleBorder(
                  borderRadius: BorderRadius.all(
                    Radius.circular(ScreenMixin.APP_ROUNDED_BOARDER_RADIUS),
                  ),
                ),
                // add icon, by default "3 dot" icon
...
                  if (saveAsFileName == '') {
                    saveAsFileName = kDefaultJsonFileName;
                  }

                  return [
                    const PopupMenuItem<int>(
                      key: Key('appBarMenuUndo'),
                      value: 0,
                      child: Text("Undo"),
                    ),
                    PopupMenuItem<int>(
                      key: const Key('appBarMenuSaveAs'),
                      value: 1,
                      child: Text("Save as $saveAsFileName"),
                    ),
                    const PopupMenuItem<int>(
                      key: Key('appBarMenuLoad'),
                      value: 2,
                      child: Text("Load ..."),
                    ),
                    const PopupMenuItem<int>(
                      key: Key('appBarMenuUploadToCloud'),
                      value: 3,
...
