...
                          selectionColor: selectionColor,
                          cursorColor: ScreenMixin.APP_TEXT_AND_ICON_COLOR,
                        ),
                      ),
                      child: GestureDetector(
                        child: TextField(
                          key: const Key('newDateTimeTextField'),
                          decoration:
                              const InputDecoration.collapsed(hintText: ''),
                          style: valueTextStyle,
                          // prevents displaying copy paste menu !
                          contextMenuBuilder: null,
                          keyboardType: TextInputType.datetime,
...
